--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id = "title">Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
+
+    <div id="color-palette">
+        <div class="color blue"></div>
+        <div class="color red"></div>
+        <div class="color yellow"></div>
+        <div class="color black"></div>
+    </div>
 
 
     <script src="./script.js"></script>
