--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-        <div class="color black"></div>
-        <div class="color blue"></div>
-        <div class="color red"></div>
-        <div class="color yellow"></div>
+        <div class="color black "></div>
+        <div class="color second "></div>
+        <div class="color third "></div>
+        <div class="color fourth "></div>
     </div>
 
     <div id="pixel-board">
