ate o requisito 6 -- adicionado evento click

--- a/index.html
+++ b/index.html
@@ -19,39 +19,39 @@
 
     <div id="pixel-board">
         <div class="linhas">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
         </div>
         <div class="linhas">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
         </div>
         <div class="linhas">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
         </div class="linhas">
         <div class="linhas">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
         </div>
         <div class="linhas">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
+            <div class="pixel background-white"></div>
         </div>
     </div>
 
