--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div id="color-palette">
         <div class="color black "></div>
-        <div class="color second "></div>
-        <div class="color third "></div>
-        <div class="color fourth "></div>
+        <div class="color blue "></div>
+        <div class="color red "></div>
+        <div class="color yellow "></div>
     </div>
 
     <div id="pixel-board">
