--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </div>
     </div>
 
+    <button id="clear-board">Limpar</button>
+
+
 
     <script src="./script.js"></script>
 </body>
